--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,38 +1,81 @@
 * {
-    box-sizing: border-box;
-    margin: 0%;
-  }
-  body {
-    background-color: #fff;
-    font-family: Avenir Next, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto,
-      Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-  }
-  ::selection {
-    background: #ff5261;
-    color: #fff;
-  }
-  
-  /* Header */
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 200px;
-    border-bottom: 1px solid lightgray;
-  }
-  header .logo {
-    width: 100%;
-    max-width: 70px;
-    height: auto;
-  }
-  header .media-icon {
-    font-size: 30px;
-    color: #ff1c30;
-    transition-duration: 0.2s;
-  }
-  header .media-icon:active {
-    color: #ff5261;
-  }
+  box-sizing: border-box;
+  margin: 0%;
+}
+body {
+  background-color: #fff;
+  font-family: Avenir Next, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto,
+    Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+::selection {
+  background: #ff5261;
+  color: #fff;
+}
+
+/* Header */
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 200px;
+  border-bottom: 1px solid lightgray;
+}
+header .logo {
+  width: 100%;
+  max-width: 150px;
+  height: auto;
+}
+.dropbtn {
+  background-color: #ff1c30;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: 0.5s;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(231, 231, 231);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: rgb(218, 218, 218);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: #ff5261;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 200px;
+  border-top: 1px solid lightgray;
+}
+footer span {
+  color: #ff1c30;
+}
