--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,12 +73,11 @@ a:hover {
   text-decoration: underline;
 }
 
-.librarian-index-actions  {
+.librarian-index-actions {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-
 
 /* Header */
 header {
@@ -158,18 +157,21 @@ main {
   margin-bottom: 0;
 }
 main .mb-3 {
-  margin-bottom: 0.5rem!important;
+  margin-bottom: 0.5rem !important;
 }
-.container-fluid{
+.container-fluid {
   --bs-gutter-x: 0rem;
 }
-main .btn-primary{
+main .btn-primary {
   background-color: #ff1c30;
   border: none;
   font-weight: 600;
 }
-main .btn-primary:hover{
+main .btn-primary:hover {
   background-color: #ff5261;
+}
+main .btn-secondary {
+  font-weight: 600;
 }
 main .fa-trash {
   color: red;
@@ -205,7 +207,7 @@ footer span {
   .librarian-index-actions {
     flex-direction: column;
     justify-content: space-between;
-}
+  }
   .action-list {
     flex-direction: column;
   }
